sprint2 요구사항 다시 수정